[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Asset Scenes/BasicShip.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 13 )

[node name="Player" type="KinematicBody2D" groups=["PLAYER"]]
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="BasicShip" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 0 )
shape = SubResource( 1 )

[node name="FiringPosition" type="Position2D" parent="."]
position = Vector2( 17, 0 )

[node name="ShootingTimer" type="Timer" parent="."]

[node name="ShieldPooperTimer" type="Timer" parent="."]

[node name="BFLTimer" type="Timer" parent="."]

[node name="BFLS" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["Entity"]]
collision_layer = 2
collision_mask = 136

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="body_entered"]
[node name="Listener2D" type="Listener2D" parent="."]
current = true
